feat: update project files

--- a/docker/mock-server.conf
+++ b/docker/mock-server.conf
@@ -64,7 +64,7 @@ http {
         # Well-known client
         location /.well-known/matrix/client {
             return 200 '{
-                "m.homeserver": {"base_url": "http://localhost"},
+                "m.NextServer": {"base_url": "http://localhost"},
                 "m.identity_server": {"base_url": "http://localhost"}
             }';
             add_header Content-Type application/json;
