--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -189,7 +189,7 @@ http {
         location /.well-known/matrix/client {
             add_header Content-Type application/json;
             add_header Access-Control-Allow-Origin *;
-            return 200 '{"m.homeserver": {"base_url": "https://matrixon.local"}}';
+            return 200 '{"m.NextServer": {"base_url": "https://matrixon.local"}}';
         }
         
         # Metrics endpoint (internal only)
